--- a/CoronaVirus/templates/index.html
+++ b/CoronaVirus/templates/index.html
@@ -85,7 +85,7 @@
                 },
                 series: [
                     {name:'累计确诊', type:'bar',encode:{x:0, y:1}},
-                    {name:'累计确诊', type:'bar',encode:{x:2, y:3}}
+                    {name:'当前确诊', type:'bar',encode:{x:2, y:3}}
                 ]
             });
         });
@@ -102,7 +102,7 @@
                     },
                     series: [
                     {name:'累计确诊', type:'bar',encode:{x:0, y:1}},
-                    {name:'累计确诊', type:'bar',encode:{x:2, y:3}}
+                    {name:'当前确诊', type:'bar',encode:{x:2, y:3}}
                     ]
                 });
             });
@@ -120,7 +120,7 @@
                     },
                     series: [
                     {name:'累计确诊', type:'bar',encode:{x:0, y:1}},
-                    {name:'累计确诊', type:'bar',encode:{x:2, y:3}}
+                    {name:'当前确诊', type:'bar',encode:{x:2, y:3}}
                     ]
                 });
             });
