fix bug of confirmed text

--- a/CoronaVirus/templates/index.html
+++ b/CoronaVirus/templates/index.html
@@ -44,7 +44,7 @@
                 subtextStyle:{align:'right'}
             },
             tooltip:{},
-            <!--legend:[{},{}],-->
+            legend:[{name:'累计确诊',right:'20%'},{name:'当前确诊',right:'20%'}],
             xAxis:[
             {
                 type:'category', name:'国家',
